# git-commit-ai

./: .gitignore  README.md  cli.py  config.py  config.yml  git_stage.py  llm_client.py  logger.py  model_provider.py  prompt.py  pyproject.toml
grpc_client/: client.py  message.proto
grpc_server/: message_pb2.py  message_pb2_grpc.py  server.py
hook/: prepare-commit-msg
