[project]
name = "git-commit-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "gitpython>=3.1.45",
    "google-genai>=1.33.0",
    "google-generativeai>=0.8.5",
    "grpcio>=1.74.0",
    "openai>=1.106.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]
